--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>FountainJS</title>
-    <meta name="description" content="">
+    <title>JH | Pracowania Stolarska</title>
+    <meta name="description" content="Jacek Hachulski pracowania stolarska. Stolarz dziełający na terenine wojewódżtwa świętokrzystkiego kielc.">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" type="image/png" href="http://fountainjs.io/assets/imgs/fountain.png" />
+    <link rel="icon" type="image/png" href="./img/favicon.ico" />
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -13,5 +13,15 @@
     <![endif]-->
 
     <div id="root"></div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-85212717-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
